<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/notes" />

    <RelativeLayout
        android:id="@+id/merger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/emailme"
                android:inputType="text"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/password"
                android:drawableStart="@drawable/password"
                android:hint="@string/pashere"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:layout_margin="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/remhere" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/remember_me"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/forgotpas"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txt2"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/drawable2"
            android:text="@string/loginme"
            android:textColor="#fff"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/registerhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/registerme"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googlesignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="14sp" />

</RelativeLayout>