<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNote">

    <LinearLayout
        android:id="@+id/layoutb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/notesTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/entertitle"
                android:inputType="textAutoCorrect" />

            <TextView
                android:id="@+id/datetoday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/myNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/TypeYourNote"
                android:inputType="textMultiLine"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/drawable2"
            android:inputType="textAutoCorrect"
            android:text="@string/saveb"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/discardb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/drawme"
            android:gravity="center"
            android:text="@string/discardb"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic|bold" />
    </LinearLayout>


</LinearLayout>